--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,7 +3,7 @@
       {
          "type": "cppbuild",
          "label": "C/C++: gcc.exe build active file",
-         "command": "C:\\msys64\\ucrt64\\bin\\gcc.exe",
+         "command": "C:\\msys64\\ucrt64\\bin\\g++.exe",
          "args": [
             "-fdiagnostics-color=always",
             "-g",
@@ -12,7 +12,7 @@
             "-L${workspaceFolder}\\lib",
             "${workspaceFolder}\\src\\*.cpp",
             "-o",
-            "${workspaceFolder}\\${workspaceFolderBasename}.exe",
+            "${workspaceFolder}\\bin\\${workspaceFolderBasename}.exe",
             "-lfreeglut",
             "-lopengl32",
             "-lglu32",
